--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-gtm-module": "^2.0.11",
     "react-i18next": "^12.1.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^4.0.3",
